# codexpick

./: .env.example  .gitignore  README.md  codexpick  codexpick_cli.py  pyproject.toml
.github/workflows/: ci.yml
